# prometheus-k8s-operator

./: .charm_tracing_buffer.raw  .flake8  .gitignore  .jujuignore  .pre-commit-config.yaml  .tfdocs.yaml  .wokeignore  .yamllint  CHANGELOG.upstream.md  CODEOWNERS  CONTRIBUTING.md  INTEGRATING.md  Makefile  README.md  RELEASE.md  SECURITY.md  actions.yaml  adl.md  arc.yaml  change-log-upstream-2.53-3.9.1.md  charmcraft.yaml  charms.just  config.yaml  justfile  metadata.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests  setup.py  spread.yaml  tox.ini
.claude/: settings.local.json
.github/: .jira_sync_config.yaml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/ISSUE_TEMPLATES/: bug_report.md
.github/workflows/: ci.yaml  codeql-analysis.yml  fetch-lib.yml  integration-tests.yml  issues.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release-edge.yaml  release-libs.yaml  release.yaml  run_tests.yaml  tics.yaml  tiobe-scan.yaml  update-libs.yaml  upload.yaml
actions/: reload-config
config/: prometheus-k8s.yml
lib/charms/alertmanager/v1/: alertmanager.py
lib/charms/alertmanager_k8s/v0/: alertmanager.py  alertmanager_dispatch.py
lib/charms/alertmanager_k8s/v1/: alertmanager_dispatch.py
lib/charms/catalogue_k8s/v0/: catalogue.py
lib/charms/catalogue_k8s/v1/: catalogue.py
lib/charms/certificate_transfer_interface/v1/: certificate_transfer.py
lib/charms/grafana_k8s/v0/: grafana_source.py  (+1 more)
release-notes/: prometheus-2.53.1-to-2.55.1-notes.md  prometheus-2.53.1-to-3.11.1-notes.md  prometheus-2.53.3-to-2.55.1-notes.md  prometheus-2.55.1-to-3.11.1-notes.md
sli_templates/: sli.yaml
specs/: 0001-alerts-editor.md  README.md
specs/adr/: 0001-packaging-sidecar-vs-separate-charm.md  0002-diff-storage.md  0003-ui-to-charm-transport.md  0004-ui-workload-design.md  0005-charm-merge-pipeline.md  0006-diff-document-schema.md
specs/plans/: 0001-alerts-editor-implementation.md
src/: alerts_overlay.py  charm.py  kubernetes_service.py  prometheus_client.py  prometheus_provider.py  prometheus_server.py  quantity.py  utils.py
src/grafana_dashboards/: prometheus-k8s_rev1.json.tmpl
src/prometheus_alert_rules/: prometheus-all-targets-missing.rule  prometheus-k8s-self-monitoring_rev1.rules  prometheus-no-alertmanager.rule  prometheus-target-scrape-slow.rule  prometheus-too-many-restarts.rule  prometheus_configuration_reload_failure.rule  prometheus_exporters_slowly.rule  prometheus_large_scrape.rule  prometheus_missing.rule  prometheus_notifications_backlog.rule  prometheus_rule_evaluation_slow.rule  prometheus_target_scrape_duplicate.rule  prometheus_tsdb_checkpoint_creation_failures.rule  prometheus_tsdb_checkpoint_deletion_failures.rule  prometheus_tsdb_compactions_failed.rule  prometheus_tsdb_head_truncations_failed.rule  prometheus_tsdb_reload_failures.rule  prometheus_tsdb_wal_corruptions.rule  prometheus_tsdb_wal_truncations_failed.rule
src/slos/: slo.yaml
src/ui/: Dockerfile  README.md  app.py  requirements.txt
src/ui/templates/: _rule_card.html.j2  _save_status.html.j2  index.html.j2
terraform/: LICENSE  README.md  main.tf  outputs.tf  terraform.tf  variables.tf  versions.tf
tests/: conftest.py  diagnostics.sh  test_charm.py  test_consumer.py  test_endpoint_aggregator.py  test_endpoint_consumer.py  test_endpoint_provider.py  test_kubernetes_service.py  test_lib.py  test_provider.py  test_remote_write.py  test_server.py
tests/bad_alert_expressions/: missing_expr.rule
tests/bad_alert_rules/: bad_yaml.rule
tests/integration/: __init__.py  conftest.py  helpers.py  juju.py  test_alternative_images.py  test_charm.py  test_check_config.py  test_cross_model_remote_write.py  test_deduplication.py  test_exemplars.py  test_external_url.py  test_ingress_with_traefik_k8s.py  test_kubectl_delete.py  test_logging.py  test_prometheus_scrape_multiunit.py  test_prometheus_tester.py  test_receive_ca_cert.py  test_receive_remote_write.py  test_regression.py  test_remote_write.py  test_remote_write_avalanche.py  test_remote_write_grafana_agent.py  test_remote_write_with_zinc.py  test_rerelate.py  test_resource_limits.py  test_upgrade_charm.py  test_workload_tracing.py  workload.py
tests/integration/prometheus-tester/: .jujuignore  charmcraft.yaml  config.yaml  metadata.yaml  requirements.txt
tests/interface/: conftest.py  test_grafana_datasource_exchange.py  test_prometheus_scrape.py
tests/manual/: browser-tests.md  bundle_1_tls.yaml  bundle_2_e2e_tls.yaml
tests/prometheus_alert_rules/: cpu_overuse.rule  target_missing.rule
tests/scenario/: conftest.py  helpers.py  test_alert_expression_labels.py  test_alertmanager_dispatch_tls.py  test_bad_scrape_job.py  test_brute_isolated.py  test_datasource_exchange.py  test_grafana_source.py  test_server_scheme.py
tests/unit/: conftest.py  helpers.py  test_absent_alert_duplicated_for_remote_writer.py  test_alert_expression_labels.py  test_alert_rule_filtering.py  test_alerts_overlay.py  test_brute_isolated.py  test_charm.py  test_charm_status.py  test_check_disk_space.py  test_datasource_exchange.py  test_endpoint_aggregator.py  test_endpoint_aggregator_v0.py  test_endpoint_aggregator_v1.py  test_endpoint_consumer.py  test_endpoint_consumer_v0.py  test_endpoint_consumer_v1.py  test_endpoint_provider.py  test_exemplars.py  test_functions.py  test_logging.py  test_prometheus_api_integration.py  test_prometheus_client.py  test_prometheus_config.py  test_prometheus_rules_provider.py  test_receive_ca_cert.py  test_remote_write.py  test_remote_writer_duplicated_alerts.py  test_server.py  test_server_scheme.py  test_slo_integration.py  test_sloth_provider.py  test_tls.py  test_transform.py  test_web_external_url.py
tests/unit/alert_rules_with_unit_topology/: nothing_is_up.rule
tests/unit/bad_alert_expressions/: missing_expr.rule
tests/unit/non_standard_prometheus_alert_rules/: odd.rule
tests/unit/prometheus_alert_rules/: cpu_overuse.rule  cpu_overuse_no_labels.rule  host_metrics_missing.rule  target_missing.rule  with_template_string.rule  with_template_string_and_unit.rule
(+55 files in other folders)
